<resources>
    <string name="app_name">Pwnie Express Network Minder</string>
    <string name="explainer1">It\'s dangerous out there! Use the Network Minder to watch for risky connections which may be malicious</string>
    <string name="explainer2">Did you know that all of your old WiFi connections are stored? This information can be used to spin up malicious access points known as Evil APs. Use the network minder to clean up old networks and alert you if an Evil AP appears in your immediate area.</string>
    <string name="explainer3">Do you run a business network? Know EXACTLY what risks your users are introducing through automated device risk scoring, provided through our companion Pulse Platform.</string>
    <string name="connectionView">See Your Connections</string>
    <string name="next">Next</string>
    <string name="bold1">On the go and need to use Wifi?</string>
    <string name="bold2">Spring Cleaning aint just for your closets</string>
    <string name="bold3">Know what you\'re getting when they connect</string>
    <string name="evilAPNextStepsExplainer">You should immediately disconnect from this network. If possible, turn off WiFi and use other connection means (cellular, wired) to regain connectivity. You should immediately cease any and all sensitive transactions (banking, shopping, personal email) unless you are running a VPN or other security mechanism. Use the \'Previous Networks\' Tab to delete networks you no longer need.</string>
    <string name="evilap_description">“Evil AP” refers to the collection of software tools and appropriate hardware which is indistinguishable from a legitimate WiFi network (i.e. ‘FreeWifi’ or ‘LoganAirportWiFi’ or ‘boingo hotspot’) to the casual observer. It allows the attacker to lure unsuspecting WiFi users into connect to their malicious access point instead of presumably safer access points.</string>
    <string name="evil_ap_in_area">There is a malicious WiFi device in your immediate area. You should discontinue use of WiFi until further notice</string>
    <string name="evil_ap_warning">Warning:Evil AP in your immediate area</string>
    <string name="device_risk_score_title">Your Device Risk Score Is...</string>
    <string name="excellent">Perfect score! You could run a clinic on how to stay WiFi safe</string>
    <string name="good_work">Keep up the good work!</string>
    <string name="not_bad">Not bad, but there\'s room for improvement</string>
    <string name="bad_news">Uh, you ok?</string>
    <string name="retained_config_advice">To get a better score, you should routinely delete networks you don\'t connect to anymore</string>
    <string name="weak_ap_encryption_advice">To improve this score, try to connect to networks with at least WPA2 encryption</string>
    <string name="no_encryption_ap_advice">To improve this score, try to connect to networks with at least WPA2 encryption</string>
    <string name="weak_pref_network_advice">Networks you connect to often should be strongly encrypted. To improve this score, choose better favorites</string>
    <string name="evil_ap_advice">Confirmed connection to malicious network. To improve this score, ensure that you routinely remove networks you no longer need, use VPNs and don\'t connect to open networks</string>
    <string name="bold_subtext1">NEED TO USE WIFI?</string>
    <string name="bold_subtext2">CLEAN UP YOUR WIFI MESS</string>
    <string name="bold_subtext3">REALTIME DEVICE RISK SCORING</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="net_recommendation">This is a good network to connect to</string>
    <string name="prev_pref_network">This was not a preferred network</string>
    <string name="prev_pref_network_positive">This was a preferred network</string>
    <string name="wpa2_psk">WPA2-PSK</string>
    <string name="wpa_psk">WPA</string>
    <string name="eap">EAP</string>
    <string name="maybe_good_network">This is probably a good network</string>
    <string name="wep">WEP</string>
    <string name="non_secure_network">This is not a secure network. Do not use</string>
    <string name="no_encryption">NONE</string>
    <string name="no_info_found">No information found on this network</string>
    <string name="no_data">N/A</string>
    <string name="other_net_strength">There are surrounding networks which have equal or stronger protections than the current network</string>
    <string name="net_change_overview">Since you last connected to this network, the security profile has changed. This is not typical</string>
    <string name="tip1">Consider connecting to a network with stronger encryption</string>
    <string name="tip2">Utilize 2-Factor-Authentiaction where possible</string>
    <string name="tip3">Use VPN services to keep your data private</string>
    <string name="stop_transactions">Stop any sensitive transactions currently in progress</string>
    <string name="kill_wifi">Use an alternate, non-Wifi, connection method</string>
    <string name="tell_owner">Inform the network owner that their network has been compromised</string>
    <string name="remove_network_tip">When done using this network, remove it from your network list</string>
    <string name="cert_check">Confirm that you have the latest certificates from the network administrator</string>
</resources>
